templates/deploy/cluster-base/templates/ingressroute-grafana.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress-route
  namespace: monitoring
  annotations:
    argocd.argoproj.io/sync-wave: "-60"
    strategy.spinnaker.io/replace: 'true'
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.bermanoc.net`)
      kind: Rule
      services:
      - kind: Service
        name: kube-prometheus-stack-grafana
        port: 80
  tls:
    secretName: my-cert-tls
